--- a/index.html
+++ b/index.html
@@ -1865,7 +1865,7 @@ function change(str){
 <p>多个生命恢复/抗性/幸运效果可提升效果等级。</p>
 <p>生命恢复(2.5秒)每恢复1点生命值、饱和每恢复1点饥饿值、潮涌能量/抗性II每3秒、其余效果每6秒，消耗1点经验值，并有1/60几率消耗烈焰粉。连锁无消耗。</p>
 <p>使用<a href="#temperancer">节制器</a>可开启/关闭所有效果。</p>
-<p>连锁钻石斧可一次性破坏相连的树、瓜、成熟的农作物，连锁钻石镐可一次性破坏相连的矿石，连锁钻石锹可一次性8米内破坏相连的沙砾、粘土、沙子和灵魂沙。该效果不受精准采集和时运影响。</p>
+<p>连锁钻石斧可一次性破坏相连的树、瓜、成熟的农作物，连锁钻石镐可一次性破坏相连的矿石和黑曜石，连锁钻石锹可一次性8米内破坏相连的沙砾、粘土、沙子和灵魂沙。该效果不受精准采集和时运影响。</p>
 <p>效果可重新附加，之前的效果将会被覆盖。与属性附加、附魔独立。</p>
 
 <h4>附魔书制作</h4>
