--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@ function change(str){
 <tr><td><img class="goal" /><span><span class="furnace"><br /></span></span></td>
 <th>参数测定</th><td>使用熔炼机熔炼矿石</td><td>—</td><td>白雪纷纷何所似</td><td>cpp:arguments</td></tr>
 <tr><td><img class="challenge" /><span><span class="piston"><br /></span></span></td>
-<th>叮当猫的口袋</th><td>八重……算了，两重石头吧</td><td>—</td><td>参数测定</td><td>cpp:doraemon</td></tr>
+<th>叮当猫的口袋</th><td>八重……算了，两重吧</td><td>—</td><td>参数测定</td><td>cpp:doraemon</td></tr>
 
 <tr><td><img class="normal" /><span><span class="rabbit_stew"><br /></span></span></td>
 <th>心急吃不了热饭菜</th><td>醒醒，这不是寿司</td><td>—</td><td>叮当猫的口袋</td><td>cpp:raw_meal</td></tr>
