:sparkles: 增加称号系统，重写前方物品探测算法，修复部分文字错误，修改附魔nbt、西瓜/西瓜片/海带的id以升级到18w21b

--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@ function change(str){
 
 <tr><td rowspan="2"><span class="mcui-row"><span class="fishing_rod" title="钓鱼"></span></span></td>
 <th rowspan="2">钓鱼</th>
-<td style="color:blue;">湿海绵/鱼头/鲑鱼头/小丑鱼头/河豚头</td></tr>
+<td style="color:blue;">湿海绵/鱼头/鲑鱼头/热带鱼头/河豚头</td></tr>
 
 <tr><td style="color:red;">火药/海晶碎片</td></tr>
 </tbody></table>
@@ -2129,6 +2129,24 @@ function change(str){
 </tbody></table>
 <p class="center"><img src="items/screenshots/head.png" /></p>
 
+
+<h3>称号</h3>
+玩家站在钻石块上并根据下表的数字输入 <code>/trigger cppTitle set 数值</code> 即可获得相应称号。
+<table class="center">
+<tbody>
+<tr><th></th><th>1</th><th>2</th><th>3</th><th>4</th><th>5</th><th>6</th><th>7</th><th>8</th><th>9</th><th>10</th></tr>
+<tr><th>0</th><td>傲视群雄</td><td>八面威风</td><td>闭月羞花</td><td>冰肌玉骨</td><td>冰清玉洁</td><td>绰约多姿</td><td>超凡入圣</td><td>超凡脱俗</td><td>沉鱼落雁</td><td>齿白唇红</td></tr>
+<tr><th>10</th><td>出类拔萃</td><td>出神入化</td><td>出水芙蓉</td><td>打酱油的</td><td>大家闺秀</td><td>淡妆浓抹</td><td>道貌岸然</td><td>登峰造极</td><td>登堂入室</td><td>婀娜多姿</td></tr>
+<tr><th>20</th><td>二八佳人</td><td>返璞归真</td><td>粉白黛黑</td><td>风度翩翩</td><td>蜂目豺声</td><td>傅粉何郎</td><td>傅粉施朱</td><td>盖世无双</td><td>刚正不阿</td><td>高风亮节</td></tr>
+<tr><th>30</th><td>姑射神人</td><td>怪模怪样</td><td>国色天香</td><td>撼天动地</td><td>鹤发童颜</td><td>鹤立鸡群</td><td>虎背熊腰</td><td>花容月貌</td><td>环肥燕瘦</td><td>技冠群雄</td></tr>
+<tr><th>40</th><td>娇小玲珑</td><td>惊世骇俗</td><td>举世无双</td><td>绝代佳人</td><td>空前绝后</td><td>梨花带雨</td><td>林下风气</td><td>伶牙俐齿</td><td>凌波仙子</td><td>炉火纯青</td></tr>
+<tr><th>50</th><td>眉目如画</td><td>眉清目秀</td><td>美如冠玉</td><td>靡颜腻理</td><td>明眸皓齿</td><td>齐天大圣</td><td>千娇百媚</td><td>螓首蛾眉</td><td>倾城倾国</td><td>容光焕发</td></tr>
+<tr><th>60</th><td>融会贯通</td><td>如花似玉</td><td>身材魁梧</td><td>深不可测</td><td>深藏不露</td><td>神功盖世</td><td>神乎其技</td><td>世外仙人</td><td>双瞳剪水</td><td>松形鹤骨</td></tr>
+<tr><th>70</th><td>所向披靡</td><td>天人合一</td><td>铁齿铜牙</td><td>亭亭玉立</td><td>头童齿豁</td><td>威镇寰宇</td><td>稳如老狗</td><td>无与伦比</td><td>雾鬓风鬟</td><td>仙风道骨</td></tr>
+<tr><th>80</th><td>仙姿佚貌</td><td>小家碧玉</td><td>小巧玲珑</td><td>心领神会</td><td>秀色可餐</td><td>秀外惠中</td><td>夭桃秾李</td><td>一表非凡</td><td>一表人才</td><td>一代宗师</td></tr>
+<tr><th>90</th><td>一笑千金</td><td>一笑倾城</td><td>衣冠楚楚</td><td>仪态万方</td><td>玉树临风</td><td>月里嫦娥</td><td>张牙舞爪</td><td>震古铄今</td><td>掷果潘安</td><td>朱唇皓齿</td></tr>
+</tbody></table>
+
 <!--画作-->
 <code>数据包 cpp_paintings</code>
 <h3>画作</h3>
@@ -2452,15 +2470,15 @@ function change(str){
 <h3>刷怪蛋合成</h3>
 <p>原版36种刷怪蛋的合成。</p>
 <table><thead><tr><th>名称</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
-<tr><th>生成 羊<br />
-生成 牛<br />
-生成 猪<br />
-生成 鸡<br />
-生成 兔子<br />
-生成 哞菇<br />
-生成 蝙蝠<br />
-生成 鱿鱼<br />
-生成 北极熊</th><td>任意羊毛+鸡蛋<br />
+<tr><th>羊刷怪蛋
+牛刷怪蛋
+猪刷怪蛋
+鸡刷怪蛋
+兔子刷怪蛋
+哞菇刷怪蛋
+蝙蝠刷怪蛋
+鱿鱼刷怪蛋
+北极熊刷怪蛋</th><td>任意羊毛+鸡蛋<br />
 皮革+鸡蛋<br />
 生猪排+鸡蛋<br />
 羽毛+鸡蛋<br />
@@ -2479,7 +2497,7 @@ function change(str){
 </span><span class="white_wool" title="羊毛">
 </span><span class="white_wool" title="羊毛">
 </span></span></span><span class="mcui-arrow"></span><span class="mcui-output">
-<span class="sheep_spawn_egg" title="生成 羊">
+<span class="sheep_spawn_egg" title="羊">
 </span></span></span><br/>
 
 <span class="mcui"><span><span class="mcui-row"><span class="ice" title="冰">
@@ -2492,12 +2510,12 @@ function change(str){
 </span><span class="ice" title="冰">
 </span><span class="ice" title="冰">
 </span></span></span><span class="mcui-arrow"></span><span class="mcui-output">
-<span class="polar_bear_spawn_egg" title="生成 北极熊">
+<span class="polar_bear_spawn_egg" title="北极熊">
 </span></span></span></td></tr>
 
-<tr><th>生成 村民<br />
-生成 卫道士<br />
-生成 唤魔者</th><td>绿宝石+鸡蛋<br />
+<tr><th>村民刷怪蛋<br />
+卫道士刷怪蛋<br />
+唤魔者刷怪蛋</th><td>绿宝石+鸡蛋<br />
 铁锭+鸡蛋<br />
 闪烁的西瓜+鸡蛋</td><td>
 <span class="mcui"><span><span class="mcui-row"><span class="emerald" title="绿宝石">
@@ -2510,18 +2528,18 @@ function change(str){
 </span><span class="emerald" title="绿宝石">
 </span><span class="emerald" title="绿宝石">
 </span></span></span><span class="mcui-arrow"></span><span class="mcui-output">
-<span class="villager_spawn_egg" title="生成 村民">
+<span class="villager_spawn_egg" title="村民">
 </span></span></span></td></tr>
 
-<tr><th>生成 爬行者<br />
-生成 僵尸<br />
-生成 骷髅<br />
-生成 蜘蛛<br />
-生成 女巫<br />
-生成 末影人<br />
-生成 史莱姆<br />
-生成 洞穴蜘蛛<br />
-生成 蠹虫</th><td>火药+鸡蛋<br />
+<tr><th>爬行者刷怪蛋
+僵尸刷怪蛋
+骷髅刷怪蛋
+蜘蛛刷怪蛋
+女巫刷怪蛋
+末影人刷怪蛋
+史莱姆刷怪蛋
+洞穴蜘蛛刷怪蛋
+蠹虫刷怪蛋</th><td>火药+鸡蛋<br />
 腐肉+鸡蛋<br />
 骨头+鸡蛋<br />
 线+鸡蛋<br />
@@ -2540,7 +2558,7 @@ function change(str){
 </span><span class="gunpowder" title="火药">
 </span><span class="gunpowder" title="火药">
 </span></span></span><span class="mcui-arrow"></span><span class="mcui-output">
-<span class="creeper_spawn_egg" title="生成 爬行者">
+<span class="creeper_spawn_egg" title="爬行者">
 </span></span></span><br/>
 
 <span class="mcui"><span><span class="mcui-row"><span class="stone_bricks" title="石砖">
@@ -2553,19 +2571,19 @@ function change(str){
 </span><span class="stone_bricks" title="石砖">
 </span><span class="stone_bricks" title="石砖">
 </span></span></span><span class="mcui-arrow"></span><span class="mcui-output">
-<span class="silverfish_spawn_egg" title="生成 蠹虫">
+<span class="silverfish_spawn_egg" title="蠹虫">
 </span></span></span></td></tr>
 
-<tr><th>生成 守卫者<br />
-生成 远古守卫者<br />
-生成 僵尸猪人<br />
-生成 恶魂<br />
-生成 岩浆怪<br />
-生成 凋灵骷髅<br />
-生成 烈焰人<br />
-生成 末影螨<br />
-生成 潜影贝<br />
-生成 幻翼</th><td>水桶+鸡蛋<br />
+<tr><th>守卫者刷怪蛋
+远古守卫者刷怪蛋
+僵尸猪人刷怪蛋
+恶魂刷怪蛋
+岩浆怪刷怪蛋
+凋灵骷髅刷怪蛋
+烈焰人刷怪蛋
+末影螨刷怪蛋
+潜影贝刷怪蛋
+幻翼刷怪蛋</th><td>水桶+鸡蛋<br />
 任意生鱼+鸡蛋<br />
 金粒+鸡蛋<br />
 恶魂之泪+鸡蛋<br />
@@ -2585,7 +2603,7 @@ function change(str){
 </span><span class="water_bucket" title="水桶">
 </span><span class="water_bucket" title="水桶">
 </span></span></span><span class="mcui-arrow"></span><span class="mcui-output">
-<span class="guardian_spawn_egg" title="生成 守卫者">
+<span class="guardian_spawn_egg" title="守卫者">
 </span></span></span><br/>
 
 <span class="mcui"><span><span class="mcui-row"><span class="chorus_fruit" title="紫颂果">
@@ -2598,16 +2616,16 @@ function change(str){
 </span><span class="chorus_fruit" title="紫颂果">
 </span><span class="chorus_fruit" title="紫颂果">
 </span></span></span><span class="mcui-arrow"></span><span class="mcui-output">
-<span class="shulker_spawn_egg" title="生成 潜影贝">
+<span class="shulker_spawn_egg" title="潜影贝">
 </span></span></span></td></tr>
 
-<tr><th>生成 狼<br />
-生成 豹猫<br />
-生成 马<br />
-生成 驴<br />
-生成 羊驼<br />
-生成 鹦鹉<br />
-生成 海龟</th><td>骨头+骷髅头颅+鸡蛋<br />
+<tr><th>狼刷怪蛋
+豹猫刷怪蛋
+马刷怪蛋
+驴刷怪蛋
+羊驼刷怪蛋
+鹦鹉刷怪蛋
+海龟刷怪蛋</th><td>骨头+骷髅头颅+鸡蛋<br />
 任意生鱼+骷髅头颅+鸡蛋<br />
 皮革+骷髅头颅+鸡蛋<br />
 箱子+骷髅头颅+鸡蛋<br />
@@ -2624,7 +2642,7 @@ function change(str){
 </span><span class="bone" title="骨头">
 </span><span class="bone" title="骨头">
 </span></span></span><span class="mcui-arrow"></span><span class="mcui-output">
-<span class="wolf_spawn_egg" title="生成 狼">
+<span class="wolf_spawn_egg" title="狼">
 </span></span></span></br>
 
 <span class="mcui"><span><span class="mcui-row"><span class="feather" title="羽毛">
@@ -2637,7 +2655,7 @@ function change(str){
 </span><span class="feather" title="羽毛">
 </span><span class="feather" title="羽毛">
 </span></span></span><span class="mcui-arrow"></span><span class="mcui-output">
-<span class="parrot_spawn_egg" title="生成 鹦鹉">
+<span class="parrot_spawn_egg" title="鹦鹉">
 </span></span></span></td></tr>
 </tbody></table>
 
@@ -3023,7 +3041,7 @@ function change(str){
 <tr><td style="text-align:center">36-40 海晶砂粒</td><td style="text-align:center">绿宝石</td></tr>
 <tr><th rowspan="4">2</th><td style="text-align:center">鳕鱼+12-20 绿宝石</td><td style="text-align:center">鳕鱼桶</td></tr>
 <tr><td style="text-align:center">三文鱼+12-20 绿宝石</td><td style="text-align:center">三文鱼桶</td></tr>
-<tr><td style="text-align:center">小丑鱼+12-20 绿宝石</td><td style="text-align:center">小丑鱼桶</td></tr>
+<tr><td style="text-align:center">热带鱼+12-20 绿宝石</td><td style="text-align:center">热带鱼桶</td></tr>
 <tr><td style="text-align:center">河鲀+12-20 绿宝石</td><td style="text-align:center">河鲀桶</td></tr>
 
 <tr><td colspan="5">
