--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ function change(str){
 <body onload="change('introduction')">
 
 <div class="banner">
-<a href="../index.html"><img src="items/screenshots/banner.png" style="width:100%;"/></a>
+<a href="../CraftingPlusPlus/index.html"><img src="items/screenshots/banner.png" style="width:100%;"/></a>
 </div>
 
 <nav id="content">
