:sparkles: 新增制作压缩附魔瓶，现在大部分机械物品是无序的，修复燧石种子，孵化器现在可掉落幻翼膜，迷你市场支持燧石

--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@ function change(str){
 <p>现在破坏刷怪箱可以获得<strong id="broken_mob_spawner">破损的刷怪箱</strong>。</p>
 
 <h3>附魔之瓶</h3>
-<p>附魔之瓶将固定掉落4点经验值。玩家在背包合成区域中间放置一个漏斗而其余8格为空时，会自动将4点经验值转化为附魔之瓶。</p>
+<p>附魔之瓶将固定掉落4点经验值。玩家在背包合成区域中间放置漏斗而其余8格为空时，会自动将4点经验值转化为附魔之瓶。如果在其上方一格还放置<a onclick="change('machines')" href="#compressor">压缩器</a>时，会自动将256点经验值转化为压缩的附魔之瓶。</p>
 
 <p><img style="width:48%" src="items/screenshots/1_mob_spawner.png" /> <img style="width:48%" src="items/screenshots/1_xp_bottle.png" /></p>
 
